---------------------------------------------
- 2021-03-26                                -
---------------------------------------------
.: WSM: Task: Allow empty last name (WSM-313)
.: WSM: Task: Preview with customer name in daily sales (WSM-314)
.: WSM: Task: Discount with showing minor symbol in invoice (WSM-316)
.: WSM: Task: Completed invoice is not found over 25 items (WSM-321)

- v1.0.1090                                 -
---------------------------------------------
- 2021-03-21                                -
---------------------------------------------
.: WSM: BugFix: Save item and type not working (WSM-308)

---------------------------------------------
- 2021-03-20                                -
---------------------------------------------
.: WSM: Task: Promotion benefit diagram (WSM-272)
.: WSM: BugFix: Fix to store string quantity (WSM-273)
.: WSM: Task: Add interval update to promotion (WSM-41)

---------------------------------------------
- 2021-03-11                                -
---------------------------------------------
.: WSM: Task: Save promotion to invoice as ObjectId (WSM-311)

---------------------------------------------
- 2021-03-03                                -
---------------------------------------------
.: WSM: Task: Export monthly sales transaction (WSM-273)

---------------------------------------------
- 2021-03-03                                -
---------------------------------------------
.: WSM: Task: A better UI for modifying item (WSM-308)

---------------------------------------------
- 2021-02-28                                -
---------------------------------------------
.: WSM: Task: Refresh pages interval (WSM-41)

- v1.0.1081                                 -
---------------------------------------------
- 2021-03-04                                -
---------------------------------------------
.: WSM: BugFix: Delivery is being updated and delivery fee is being removed (WSM-309)