@@ -213,6 +213,7 @@ export class AuthInvoiceContributorUrl {
     static editInvoiceUrl = URL.AUTH_INVOICE_CONTRIBUTOR_URL + '/';
     static updateInvoiceStatusUrl = URL.AUTH_INVOICE_CONTRIBUTOR_URL + '/change-status';
     static getUnseenInvoicesUrl = URL.AUTH_INVOICE_CONTRIBUTOR_URL + '/unseen'
+    static getInvoiceGroupUrl = URL.AUTH_INVOICE_CONTRIBUTOR_URL + '/group'
 }
 export class AuthInvoiceConfigurationContributorUrl {
     static getInvoiceConfigurationUrl = URL.AUTH_INVOICE_CONFIGURATION_CONTRIBUTOR_URL + '/';
